# openpace

./: .buildinfo  .gitignore  .travis.yml  AUTHORS  BP.patch  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS.md  OpenPACE.patch  README  README.md  README.rst  SECURITY.md  Vagrantfile  appveyor.yml  bootstrap  configure.ac  generate-eac-pki.sh  ibm4.patch  ibm4_1.patch  ibm4_2.patch  index.html  libeac.pc.in  make.sh  objects.inv  oids.patch  openpace.patch  protocols.html  python_api.html  search.html  searchindex.js  usage.html
.github/: build.sh  openssl_getrandom.diff  test.bat  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ape.yml  coverity.yml  macos.yml  scorecard.yml  ubuntu.yml
_sources/: protocols.txt  usage.txt
_static/: Makefile  Makefile.in  eactest.html
_static/doxygen/: OpenPACE.tag  annotated.html  ca_8h.html  ca_8h_source.html  classes.html  cv__cert_8h.html  cv__cert_8h_source.html  dir_2beb2c8fad66f6564e9cdda73fb11327.html  eac_8h.html  eac_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__caproto.html  group__eacproto.html  group__management.html  group__paceproto.html  group__printing.html  group__riproto.html  group__sm.html  group__taproto.html  index.html  modules.html  objects_8h.html  objects_8h_source.html  pace_8h.html  pace_8h_source.html  ri_8h.html  ri_8h_source.html  structca__ctx.html  structcvc__cert__body__seq__st.html  structcvc__cert__seq__st.html  (+13 more)
bindings/: Makefile.am  README  ca.i  cvc.i  eac.i  objects.i  pace.i  ta.i  util.i
bindings/go/: Makefile.am  example.go
bindings/java/: EAC_Example.java  Example.java  JPace.java  Makefile.am
bindings/python/: Makefile.am  chat.py  cvc_rehash.in  example.py  pace_entity.py  setup.py.in  test.py
bindings/ruby/: Makefile.am  example.rb  extconf.rb.in  test.rb
bindings/win32/: eac.sln  eac.vcxproj  eac.vcxproj.filters
bitbake/openssl/: openssl_1.0.0e.bb
bitbake/openssl/openssl-1.0.0e/: BP.patch  OpenPACE.patch  ibm4.patch
cross/: Makefile.am  libeac-0_with_patched_openssl.def  libeac-0_without_patched_openssl.def  libeac-1_with_patched_openssl.def  libeac-1_without_patched_openssl.def
cross/MacOSX_install/: postinstall
cross/MacOSX_uninstall/: postinstall
doc/: Doxyfile  Doxyfile.in  INSTALL.rst  Makefile  Makefile.am  bindings  bindings.rst  bindings.txt  conf.py  conf.py.in  index.html  index.rst  index.rst.in  index.txt  index.txt.in  install.rst  install.txt  install.txt.in  objects.inv  programming.txt  programming.txt.in  protocols.html  protocols.rst  protocols.txt  python_api.rst  python_api.txt  usage.txt  usage.txt.in
doc/_sources/: install.txt  usage.txt
doc/_static/: Makefile.am  doxygen  eactest.html  eactest.js
doc/_static/doxygen/: OpenPACE.tag
doc/_static/doxygen/html/: ca_8h.html  ca_8h_source.html  cv__cert_8h_source.html  eac_8h.html  eac_8h_source.html  functions_func.html  globals_type.html  group__caproto.html  group__management.html  group__paceproto.html  group__printing.html  group__riproto.html  modules.html  objects_8h.html  structca__ctx.html  structcvc__cert__request__body__seq__st.html  structcvc__cert__request__seq__st.html  structcvc__certificate__description__st.html  structcvc__discretionary__data__template__seq__st.html  structpace__ctx.html  structri__ctx.html  ta_8h.html  ta_8h_source.html
doc/_static/doxygen/xml/: ca_8h.xml  dir_2beb2c8fad66f6564e9cdda73fb11327.xml  group__caproto.xml  group__eacproto.xml  group__management.xml  group__printing.xml  group__taproto.xml  pace_8h.xml  structca__ctx.xml  structcvc__cert__body__seq__st.xml  structcvc__cert__request__seq__st.xml  structcvc__commcert__seq__st.xml  structcvc__discretionary__data__template__seq__st.xml  structeac__ctx.xml  structri__ctx.xml  ta_8h.xml
doc/bindings/: Makefile.am  README.rst  python_api.rst
docs/: index.html  install.html  objects.inv  programming.html  protocols.html  python_api.html  search.html  searchindex.js  usage.html
docs/_sources/: index.txt  install.txt  programming.txt  protocols.txt  usage.txt
docs/_static/doxygen/: OpenPACE.tag  annotated.html  ca_8h.html  ca_8h_source.html  classes.html  cv__cert_8h.html  cv__cert_8h_source.html  dir_2beb2c8fad66f6564e9cdda73fb11327.html  doxygen_sqlite3.db  eac_8h.html  eac_8h_source.html  files.html  functions.html  functions_func.html  globals.html  (+42 more)
src/: Makefile.am  bsi_objects.txt  ca_lib.c  ca_lib.h  cv_cert.c  cv_cert_test.c  cvc-create.c  cvc-create.ggo.in  cvc-print.c  cvc-print.ggo.in  cvc_lookup.c  cvcprint.c  eac.c  eac_asn1.c  eac_asn1.h  eac_ca.c  eac_dh.c  eac_dh.h  eac_ecdh.c  eac_ecdh.h  eac_err.h  eac_kdf.c  eac_kdf.h  eac_lib.c  eac_lib.h  eac_print.c  eac_util.c  eac_util.h  eactest.c  example.c  misc.c  misc.h  objects.c  pace.c  pace_lib.c  pace_lib.h  pace_mappings.c  pace_mappings.h  read_file.c  read_file.h  (+9 more)
src/bindings/: Makefile.am  README  ca.i  configure.ac  cvc.i  util.i
src/bindings/doc/: Makefile  conf.py
src/bindings/java/: Makefile.am
src/bindings/python/: Makefile.am  chat.py  setup.py.in  test.py
src/bindings/src/: Makefile.am  ca.i  cvc.i  eac.i  pace.i  ta.i  util.i
src/bindings/src/java/: JPace.java  Makefile.am
src/bindings/src/python/: Makefile.am  chat.py  pace_entity.py  setup.py.in  test.py
src/bindings_old/: AUTHORS  README  autogen.sh
src/certs/: csca-germany_013_self_signed_cer.cer  cvca-eid.cv  cvca-epass.cv  cvca-esign.cv
src/doc/: Doxyfile.in  Makefile.am  index.txt.in  usage.txt.in
src/doc/_templates/: layout.html
src/docs/: Doxyfile.in  Makefile.am  conf.py.in  efcardaccess_asn1.conf  efcardsecurity_templ_asn1.conf  index.txt.in  install.txt.in  programming.txt.in  protocols.txt.in  python_api.txt  requirements.txt  usage.txt.in
src/docs/_static/: Makefile.am  eactest.html.mem
src/eac/: ca.h  cv_cert.h  eac.h  objects.h  pace.h  ri.h  ta.h
tools/: cvc_rehash.py
win32/: Makefile.am  gentoo.config-1.0.0
(+86 files in other folders)
